# AGS-GNN

./: README.md  conda_requirements.txt  gilbreth.txt  pip_requirements.txt
CPPsamplerPy/: CMakeLists.txt  README.md
CPPsamplerPy/apps/: CMakeLists.txt  test_app.cc
CPPsamplerPy/include/wsample/: .utils.h.swp  mysampling.h  utils.h
CPPsamplerPy/python_codes/.ipynb_checkpoints/: Test-checkpoint.ipynb
CPPsamplerPy/src/: .nfs000000002cb3b3d00000f9d9  CMakeLists.txt  module.cc  mysampling.cc
GNNs/: ACM-GCN.ipynb  AGS-GNN-LP.ipynb  AGS-GS-GIN.ipynb  AGS-GS-GSAINT-Disjoint.ipynb  AGS-GS-GSAINT.ipynb  AGS-GS-LINKX.ipynb  AGS-GS-SAINT-ACM.ipynb  AGS-GS-SAINT-CHEB.ipynb  AGS-GS-SAINT-II.ipynb  AGS-LINKXmodel.ipynb  AGS-NS-Ablation.ipynb  AGS-NS-GIN-II.ipynb  AGS-NS-GSAGE-CHEB.ipynb  AGS-NS-GSAGEorGIN.ipynb  AGS-NS.ipynb  ClusterGCN.ipynb  GCN_GAT_GIN_SAGE.ipynb  GNNSparse.ipynb  GSAGE-loader.ipynb  GSAGE.ipynb  GSAGEmultilabel.ipynb  GSAINT.ipynb
GNNs/LINKXbyAuthors/: AGS-LINKX.ipynb  AGS_HeteroDataset.ipynb  LINKX-Scalable-Neighbor.ipynb  LINKX-Scalable-Neighbor2.ipynb  LINKX-Scalable.ipynb  LoadLargeHeterophilyDataset.ipynb  batch_utils.py  data_utils.py  dataset.py  load_data.py  main_linkx.ipynb  main_scalable.py  parse.py
GNNs/LINKXbyPyG/: LINKX.ipynb  LINKXmodel.ipynb
Submodular/: AGSConv.ipynb  AGSGraphSampler.ipynb  AGSNodeSampler.ipynb  AGS_Sparse.ipynb  CustomFacilityLocation.py  CustomFeatureBased.py  CustomGraphBased.py  CustomMaxCoverage.py  Dataset.ipynb  DeviceDir.py  DisjointSparsifier.ipynb  EffectiveResistanceWeights.ipynb  HeterophilousDataset.ipynb  IdealWeight.ipynb  KNNWeights.ipynb  Laplacian.ipynb  Pearson_Correlation.ipynb  PretrainedLink.ipynb  PretrainedLinkFast.ipynb  PretrainedLinkFastOld.ipynb  RandomSparse.ipynb  Scratch.ipynb  SpatialConv.ipynb  SubmodularWeights.ipynb  SubmodularWeightsApricot.ipynb  SubmodularWeightsOld.ipynb  Utils.ipynb
Submodular/DGL/: Actor.ipynb  DGL_GCN.ipynb  DGL_GSAGE-AGSampler.ipynb  DeviceDir.py  HeterophilicDataset.ipynb  HeterophilousDataset.ipynb  PyG2AGS_GNN_NodeSampling.ipynb  PygDataset.ipynb  PygLib.ipynb
Submodular/Plots/: +homophily_test.eps  Reddit-KNN-cosine.txt  Reddit-baseline.txt  Reddit.txt  Reddit_sub_far.txt  homophily_Actor.eps  homophily_Amazon-ratings.eps  homophily_AmazonProducts.eps  homophily_CS.eps  homophily_Chameleon.eps  homophily_CiteSeer.eps  homophily_Computers.eps  homophily_Cora.eps  homophily_Cornell.eps  homophily_Flickr.eps  homophily_Minesweeper.eps  homophily_Photo.eps  homophily_Physics.eps  homophily_Questions.eps  homophily_Reddit.eps  homophily_Reddit2.eps  homophily_Roman-empire.eps  homophily_Squirrel.eps  homophily_Texas.eps  homophily_Tolokers.eps  homophily_Wisconsin.eps  homophily_Yelp.eps  (+17 more)
(+16 files in other folders)
